OK WOW I FIGURED IT OUT

--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>OWENS.</h1>
+<h1><center> OWEN MILLER IS THE PRIMARY OWEN</h1>
 
-<p>coming soon.</p>
+<p><center> for beaning owen Sullivan in the head so hard with a pillow, he died</p>
 
 </body>
 </html>
