more,, spelling fixes,,,

--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -1,11 +1,11 @@
-ls
+
     <!DOCTYPE html>
 <html>
 <body>
 
 <h1><center> OWEN MILLER IS THE PRIMARY OWEN</h1>
 
-<p><center> for beaning owen Sullivan in the head so hard with a pillow he died.</p>
+<p><center> for beaning owen Sullivan in the head so hard with a pillow that he died.</p>
 
 </body>
 </html>
