--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -1,11 +1,9 @@
+{% extends "base.html" %}
+{% block body %}
 
-    <!DOCTYPE html>
-<html>
-<body>
-
+<div class = "container">
 <h1><center> OWEN MILLER IS THE PRIMARY OWEN</h1>
 
 <p><center> for beaning owen Sullivan in the head so hard with a pillow that he died.</p>
 
-</body>
-</html>
+</div>
