--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang = "en">
-    <head>
+<head>
     <title>Who Is The Primary Owen</title>
     <meta charset = "utf8">
     <meta name="theme-color" content = "B0197E">
@@ -8,6 +8,26 @@
     <link rel = "stylesheet" href = "/static/css/styles.css">
     <script scr = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/bootstrap.min.js"></script>
     </head>
+<body>
+    {% block nav %}
+    <nav class = "navbar navbar-inverse navbar-fixed-top">
+        <div class = "container">
+            <div class = "navbar-header">
+                <button type = "button" class = "navbar-toggle collapsed" data-toggle = "collapse" data-target = "navbar" aria-expanded = "false" aria-controls = "navbar">
+                <span class "sr-only"> Toggle Navigation </span>
+                <span class = "icon-bar"></span>
+                </button>
+            <a class = "navbar-brand" href "/">Who Is The Primary Owen </a>
+        </div>
+    <div id = "navbar" class = "navbar-collapse collapse">
+        <ul class = "nav navbar-nav">
+            <li>
+                <a href = "/contest Owenership">
+                    Contest Owenership
+                </a>
+            </li>
+        </ul>
+
 <body>
     {% block body %}
     {% endblock %}
