--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -1,15 +1,46 @@
 <!doctype html>
 <html lang = "en">
-<head>
-    <title>Who Is The Primary Owen</title>
-    <meta charset = "utf8">
-    <meta name="theme-color" content = "B0197E">
-    <link rel = "stylesheet" href = "/static/css-material-bootstrap/dist/css/csh-material-bootstrap.css">
-    <link rel = "stylesheet" href = "/static/css/styles.css">
-    <script scr = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/bootstrap.min.js"></script>
-    </head>
-<body>
-    {% block body %}
-    {% endblock %}
-</body>
+   <head>
+      <title>Who Is The Primary Owen</title>
+      <meta charset = "utf8">
+      <meta name="theme-color" content = "B0197E">
+      <link rel = "stylesheet" href = "/static/css-material-bootstrap/dist/css/csh-material-bootstrap.css">
+      <link rel = "stylesheet" href = "/static/css/styles.css">
+      <script scr = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/bootstrap.min.js"></script>
+   </head>
+   <body>
+      {% block body %}
+      {% endblock %}
+   </body>
+<nav class="navbar navbar-inverse navbar-static-top">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Balance Web Development</a>
+		</div>
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">About</a></li>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#">Design</a></li>
+						<li><a href="#">Development</a></li>
+						<li><a href="#">Consulting</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
+
+    
 </html>
+
