--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -12,35 +12,65 @@
       {% block body %}
       {% endblock %}
    </body>
-<nav class="navbar navbar-inverse navbar-static-top">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#">Balance Web Development</a>
-		</div>
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">About</a></li>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="#">Design</a></li>
-						<li><a href="#">Development</a></li>
-						<li><a href="#">Consulting</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</div>
-	</div>
+
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Audiophiler</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="/upload">
+                            <span class="glyphicon glyphicon-upload"></span>
+                            Upload
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/mine">
+                            My Files
+                        </a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown navbar-user">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                           role="button" aria-expanded="false">
+                            <img src="https://profiles.csh.rit.edu/image/{{ auth_dict["uid"] }}"
+                                 title="{{ auth_dict["uid"] }}">
+                            {{ auth_dict["uid"] }}
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="https://profiles.csh.rit.edu/user/{{ auth_dict["uid"] }}">
+                                    <span class="glyphicon glyphicon-user"></span>
+                                    Profile
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://members.csh.rit.edu/">
+                                    <span class="glyphicon glyphicon-globe"></span>
+                                    Members Portal
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/logout">
+                                    Logout
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
 </nav>
-
-
-    
 </html>
 
