--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang = "en">
-   <head>
-      <title>Who Is The Primary Owen</title>
-      <meta charset = "utf8">
-      <meta name="theme-color" content = "B0197E">
-      <link rel = "stylesheet" href = "/static/css-material-bootstrap/dist/css/csh-material-bootstrap.css">
-      <link rel = "stylesheet" href = "/static/css/styles.css">
-      <script scr = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/bootstrap.min.js"></script>
-   </head>
+<html lang="en">
+<head>
+    <title>Audiophiler</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#B0197E">
+    <link rel="stylesheet" href="/static/css/csh-material-bootstrap/dist/css/csh-material-bootstrap.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="manifest" href="/static/manifest.json">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
     <body>
 {% block nav %}
     <nav class="navbar navbar-inverse navbar-fixed-top">
