--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Audiophiler</title>
+    <title>Who Is The Primary Owen</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#B0197E">
