trying to just import things

--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -1,5 +1,18 @@
 <!doctype html>
 <html lang="en">
+<html lang="en">
+<head>
+    <title>Who Is The Primary Owen</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#B0197E">
+    <link rel="stylesheet" href="/static/css/csh-material-bootstrap/dist/css/csh-material-bootstrap.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="manifest" href="/static/manifest.json">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+    
 <body>
    <body>
       {% block body %}
