still trying to fix things

--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -25,48 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Audiophiler</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/upload">
-                            <span class="glyphicon glyphicon-upload"></span>
-                            Upload
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/mine">
-                            My Files
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown navbar-user">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                           role="button" aria-expanded="false">
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>
-                                    <span class="glyphicon glyphicon-user"></span>
-                                    Profile
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://members.csh.rit.edu/">
-                                    <span class="glyphicon glyphicon-globe"></span>
-                                    Members Portal
-                                </a>
-                            </li>
-                            <li>
-                                <a href="/logout">
-                                    Logout
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                <a class="navbar-brand" href="/">Who Is The Primary Owen</a>
             </div>
         </div>
     </nav>
