--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Who Is The Primary Owen</a>
+                <a class="navbar-brand" href="/">Who Is The Primary Owen?</a>
             </div>
         </div>
     </nav>
