ok, so we're trying to put things in boxes.

--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -3,6 +3,7 @@ s{% extends "base.html" %}
 
 
 <div class = "container">
+    <div class = "panel-body">
                     <div class="panel panel-primary">
                     <div class="panel-heading">
                         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
@@ -17,12 +18,14 @@ s{% extends "base.html" %}
                             </a>
                         </div>
                     </div>
+    </div>
                 </div>
-
+<div class = "panel-body">
     
 <h1><center> OWEN MILLER IS THE PRIMARY OWEN</h1>
 
 <p><center> for beaning owen Sullivan in the head so hard with a pillow that he died.</p>
+</div>
 
 </div>
 {% endblock %}
