--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -11,18 +11,34 @@ s{% extends "base.html" %}
                         </a>
                     </div>
                     <div class="panel-body">
+                        <center>
                         <div class="plug-body">
                             <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug">
                                 <img style="width: 80%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
                             </a>
                         </div>
+                        <center>
                     </div>
                 </div>
     
+<div class = "panel panel-primary">
+    <div class = "panel-heading">
+        <a title = "Current Primary Owen" style="color: #000000">
+            Current Primary Owen
+        </a>
+    </div>
+    <div class = "panel-body">
+    <center>
+    <div class = "winner-body">
+        <a title = "Current Primary Owen">
+           
     
 <h1><center> OWEN MILLER IS THE PRIMARY OWEN</h1>
 
 <p><center> for beaning owen Sullivan in the head so hard with a pillow that he died.</p>
+    </a>
+    </div>
+    </div>
 
 </div>
 {% endblock %}
