--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -1,44 +1,50 @@
-s{% extends "base.html" %}
+{% extends "base.html" %}
 {% block body %}
-
-
 <div class = "container">
-
-    <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
-                            Advertisements by CSH: Plug
-                        </a>
-                    </div>
-                    <div class="panel-body">
-                        <center>
-                        <div class="plug-body">
-                            <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug">
-                                <img style="width: 80%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
-                            </a>
-                        </div>
-                        <center>
-                    </div>
-                </div>
-    
 <div class = "panel panel-primary">
-    <div class = "panel-heading">
-        <a title = "Current Primary Owen" style="color: #000000">
-            Current Primary Owen
-        </a>
-    </div>
-    <div class = "panel-body">
-    <center>
-    <div class = "winner-body">
-        <a title = "Current Primary Owen">
-           
-    
-<h1><center> OWEN MILLER IS THE PRIMARY OWEN</h1>
+   <div class = "panel-heading">
+      <a style="color: #000000">
+      </a>
+   </div>
+   <div class = "panel-body">
+      <center>
+      <div class = "winner-body">
+         <h1>
+            <center>
+            OWEN MILLER IS THE PRIMARY OWEN
+         </h1>
+         <p>
+         <center>
+         for beaning owen Sullivan in the head so hard with a pillow that he died.</p>
+         </a>
+      </div>
+   </div>
 
-<p><center> for beaning owen Sullivan in the head so hard with a pillow that he died.</p>
-    </a>
+   <div class = "panel panel-primary">
+      <div class = "panel-heading">
+           Contact Me
+      </div>
+      <div class = "panel-body">
+        <center>
+            email this email address to report a change in the primary owen
+        </center>
+      </div>
     </div>
-    </div>
-
+   <div class="panel panel-primary">
+      <div class="panel-heading">
+         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
+         Advertisements by CSH: Plug
+         </a>
+      </div>
+      <div class="panel-body">
+         <center>
+         <div class="plug-body">
+            <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug">
+            <img style="width: 80%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
+            </a>
+         </div>
+         <center>
+      </div>
+   </div>
 </div>
 {% endblock %}
