--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
+<div class = "container">
 <div class = "panel panel-primary">
    <div class = "panel-heading">
       <a style="color: #000000">
@@ -18,6 +19,7 @@
          </a>
       </div>
    </div>
+</div>
 
    <div class = "panel panel-primary">
       <div class = "panel-heading">
@@ -45,4 +47,5 @@
          <center>
       </div>
    </div>
+</div>
 {% endblock %}
