--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -33,7 +33,7 @@
     </div>
    <div class="panel panel-primary">
       <div class="panel-heading">
-         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
+         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug">
          Advertisements by CSH: Plug
          </a>
       </div>
