--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -40,8 +40,8 @@
       <div class="panel-body">
          <center>
          <div class="plug-body">
-            <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug">
-            <img style="width: 80%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
+            <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000" >
+            <img style="width: 100%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
             </a>
          </div>
          <center>
