--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -4,6 +4,7 @@
 <div class = "panel panel-primary">
    <div class = "panel-heading">
       <a style="color: #000000">
+        Who Is The Primary Owen?
       </a>
    </div>
    <div class = "panel-body">
@@ -33,7 +34,7 @@
     </div>
    <div class="panel panel-primary">
       <div class="panel-heading">
-         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug">
+         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
          Advertisements by CSH: Plug
          </a>
       </div>
