--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -23,7 +23,7 @@
 </div>
 
    <div class = "panel panel-primary">
-      <div class = "panel-heading">
+      <div class = "panel-heading" style="color: #000000">
            Contact Me
       </div>
       <div class = "panel-body">
