--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -32,21 +32,20 @@
         </center>
       </div>
     </div>
-   <div class="panel panel-primary">
-      <div class="panel-heading">
-         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
-         Advertisements by CSH: Plug
-         </a>
-      </div>
-      <div class="panel-body">
-         <center>
-         <div class="plug-body">
-            <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000" >
-            <img style="width: 100%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
-            </a>
-         </div>
-         <center>
-      </div>
-   </div>
+
+
+
+                    <div class="panel-heading">
+                        <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
+                            Advertisements by CSH: Plug
+                        </a>
+                    </div>
+                    <div class="panel-body">
+                        <div class="plug-body">
+                            <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug">
+                                <img style="width: 100%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
+                            </a>
+                        </div>
+                    </div>
 </div>
 {% endblock %}
