the mobile site is a big mess

--- a/primaryOwenTracker/templates/base.html
+++ b/primaryOwenTracker/templates/base.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">Who Is The Primary Owen?</a>
+                <a class="navbar-brand" href="/">Primary Owen</a>
             </div>
         </div>
     </nav>
