Added a mailto link so that the contact text just pops you into an email that goes to Skyler

--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -28,7 +28,9 @@
       </div>
       <div class = "panel-body">
         <center>
-            email this email address to report a change in the primary owen
+		<a href="mailto:wgahnagl@csh.rit.edu">
+		       email this email address to report a change in the primary owen
+		</a>
         </center>
       </div>
     </div>
