--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -7,9 +7,16 @@
         Who Is The Primary Owen?
       </a>
    </div>
+
+    
    <div class = "panel-body">
+   <div class = "col col-lg-2">
+    <img src="https://profiles.csh.rit.edu/image/euler" alt="Mountain View">
+   </div>
+    
       <center>
       <div class = "winner-body">
+      <div class = "col-md-auto">
          <h1>
             <center>
             OWEN MILLER IS THE PRIMARY OWEN
@@ -18,6 +25,7 @@
          <center>
          for beaning owen Sullivan in the head so hard with a pillow that he died.</p>
          </a>
+      </div>
       </div>
    </div>
 </div>
@@ -32,7 +40,6 @@
         </center>
       </div>
     </div>
-    
    <div class="panel panel-primary">
       <div class="panel-heading">
          <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
@@ -42,11 +49,8 @@
       <div class="panel-body">
          <center>
          <div class="plug-body">
-    
-                            <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug">
-                                <img style="width: 100%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
-                            </a>
-                        
+            <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000" >
+            <img style="width: 100%" src="https://plug.csh.rit.edu/data" alt="Advertisements by CSH: Plug">
             </a>
          </div>
          <center>
