made a sumbission page

--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -3,7 +3,7 @@
 <div class = "container">
 <div class = "panel panel-primary">
    <div class = "panel-heading">
-      <a style="color: #000000">
+      <a style="color: #ffffff">
         Who Is The Primary Owen?
       </a>
    </div>
@@ -31,18 +31,22 @@
 </div>
 
    <div class = "panel panel-primary">
-      <div class = "panel-heading" style="color: #000000">
-           Contact Me
+      <div class = "panel-heading" style="color: #ffffff">
+           submit a change
       </div>
       <div class = "panel-body">
         <center>
-            email this email address to report a change in the primary owen
+         <a href="/submission">
+            <h1>
+            submit a change in the primary owen
+            </h1>
+         </a>
         </center>
       </div>
     </div>
    <div class="panel panel-primary">
       <div class="panel-heading">
-         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #000000">
+         <a href="https://plug.csh.rit.edu" title="Advertisements by CSH: Plug" style="color: #ffffff">
          Advertisements by CSH: Plug
          </a>
       </div>
