fixed sumbmission page resizing

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -15,7 +15,7 @@
     <input type="text" name="owen">
     <br>
     
-     <textarea rows="4" cols="50" style="border:solid 1px black;">
+     <textarea style="border:solid 1px black; height: 50%; width:80%;">
     </textarea>
     <center>
     <button type="button"> submit </button>
