--- a/primaryOwenTracker/templates/index.html
+++ b/primaryOwenTracker/templates/index.html
@@ -11,7 +11,7 @@
     
    <div class = "panel-body">
    <div class = "col col-lg-2">
-    <img src="https://profiles.csh.rit.edu/image/euler" alt="Mountain View">
+    <img src="https://profiles.csh.rit.edu/image/owen" alt="Mountain View">
    </div>
     
       <center>
@@ -19,11 +19,11 @@
       <div class = "col-md-auto">
          <h1>
             <center>
-            OWEN MILLER IS THE PRIMARY OWEN
+            OWEN SULLIVAN IS THE PRIMARY OWEN
          </h1>
          <p>
          <center>
-         for beaning owen Sullivan in the head so hard with a pillow that he died.</p>
+         for whooping Owen Miller's ass so hard in bowling that he completely disintegrated in bowl-a-roll</p>
          </a>
       </div>
       </div>
