--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -9,18 +9,18 @@
       </a>
    </div>
    <div class = "panel-body">
+   <form action="/add_owen" method="PUT">
           <div class = "inner-panel-body">
-            <form>
-    Owen Name:&nbsp &nbsp
-    <input type="text" name="owen">
-    <br>
-    
-     <textarea style="border:solid 1px black; height: 50%; width:80%;">
-    </textarea>
-    <center>
-    <button type="button"> submit </button>
-    </center>
-            </form>
+          <input type="text"
+            username="usernameString"
+            placeholder="username of owen">
+          <input type="text"
+            victory="owenVictory"
+            placeholder="describe the victory">
+          <br>
+          <input type="submit"
+                value = "Submit">
+  </form>
          <p>
          <center>
         </p>
