fixing more of the submission page

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -9,13 +9,15 @@
       </a>
    </div>
    <div class = "panel-body">
+    
    <form action="/add_owen" method="PUT">
           <div class = "inner-panel-body">
           <input type="text"
-            username="usernameString"
+            name="username"
             placeholder="username of owen">
+          <br>
           <input type="text"
-            victory="owenVictory"
+            name="victory"
             placeholder="describe the victory">
           <br>
           <input type="submit"
