Changed put to post

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -10,7 +10,7 @@
    </div>
    <div class = "panel-body">
     
-   <form action="/add_owen" method="PUT">
+   <form action="/add_owen" method="POST">
           <div class = "inner-panel-body">
           <input type="text"
             name="username"
