--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -11,11 +11,8 @@
    </div>
    <div class = "panel-body">
     
-<<<<<<< HEAD
-   <form id="put_owen" action="/add_owen" method="PUT">
-=======
+   <form id="put_owen">
    <form action="/add_owen" method="POST">
->>>>>>> ff728a513e5ae205d6a565cd742db0092a34ac93
           <div class = "inner-panel-body">
           <input type="text"
             name="username"
