nope, that should've had a post and an action with it

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -11,7 +11,7 @@
    </div>
    <div class = "panel-body">
     
-   <form id="put_owen">
+   <form id="put_owen" action="/add_owen" method="POST">
           <div class = "inner-panel-body">
           <input type="text"
             id="username"
