what is going on and why is it sending a put request

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -42,7 +42,7 @@
             $.ajax({
                 url: '/add_owen',
                 dataType: 'json',
-                type: 'PUT',
+                type: 'POST',
                 data: formData
                 encode : true,
     
