still trying,,, I've added method override put, so maybe that'll work

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -43,6 +43,8 @@
                 url: '/add_owen',
                 dataType: 'json',
                 type: 'POST',
+                headers: {"X-HTTP-Method-Override": "PUT"}
+
                 data: formData
                 encode : true,
     
