--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -42,7 +42,7 @@
             $.ajax({
                 url: '/add_owen',
                 dataType: 'json',
-                type: 'POST',
+                method: POST,
                 headers: {"X-HTTP-Method-Override": "PUT"}
 
                 data: formData
