what the fuck is happening

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -42,9 +42,7 @@
             $.ajax({
                 url: '/add_owen',
                 dataType: 'json',
-                method: POST,
-                headers: {"X-HTTP-Method-Override": "PUT"}
-
+                method: PUT,
                 data: formData
                 encode : true,
     
