ok tryig to get it to be a put request again

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -42,6 +42,7 @@
             $.ajax({
                 type:"PUT",
                 url: /add_owen,
+                dataType: 'json',
                 contentType: "application/json",
                 data: formData
     
