put please work

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -40,10 +40,10 @@
 
     
             $.ajax({
-                type:"PUT",
-                url: /add_owen,
+                type:'PUT',
+                url: '/add_owen',
                 dataType: 'json',
-                contentType: "application/json",
+                contentType: 'application/json',
                 data: formData
     
             });
