--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -35,7 +35,7 @@
     
         var formData = {
             'username'              : $('input[name=username]').val(),
-            'victory'             : $('input[name=victory]').val(),
+            'victory'               : $('input[name=victory]').val(),
         };
 
     
@@ -44,7 +44,7 @@
                 url: '/add_owen',
                 dataType: 'json',
                 contentType: 'application/json',
-                data: formData
+                data:JSON.stringify(formData)
     
             });
 
