time,, should work now.

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -33,10 +33,12 @@
     
     (function($){
         function processForm( e ){
+        var currentTime = new Date().today() + new Date().timeNow() + "";
     
         var formData = {
             'username'              : $('input[name=username]').val(),
             'victory'               : $('input[name=victory]').val(),
+            'time'                  : $(currentTime),
         };
     
             $.ajax({
@@ -52,13 +54,7 @@
         $('#put_owen').submit( processForm );
     })(jQuery);
 </script>
-
-
-
-
-
-    
-         <p>
+        <p>
          <center>
         </p>
          </a>
