trying to get flashes working

--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -36,18 +36,18 @@
    <div class = "panel-body">
     
    <form id="put_owen" action="/add_owen" method="POST">
-          <div class = "inner-panel-body">
-          <input type="text"
+          <div class = "inner-panel-body text-center">
+          <input type="text" class="form-control"
             id="username"
             name="username"
             placeholder="username of owen">
           <br>
-          <input type="text"
+          <input type="text" class="form-control"
             id="victory"
             name="victory"
             placeholder="describe the victory">
           <br>
-          <input type="submit"
+          <input type="submit" class="form-control btn btn-defaul"
                 value = "Submit">
   </form>
     
