--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -8,7 +8,10 @@
         
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
-    <ul class=alert, style="list-style: none">
+    <ul class=alert, style="list-style: none" >
+    <a style="color :#000000">
+
+    
         {% for category, message in messages %}
             <script>
                 switch(category){
@@ -25,6 +28,7 @@
                     </div>
              {% endfor %}
     </ul>
+    </a>
   {% endif %}
 {% endwith %}
 
@@ -76,8 +80,10 @@
     
             });
             e.preventDefault();
+    
         }
         $('#put_owen').submit( processForm );
+        window.location.reload(); 
     })(jQuery);
 </script>
         <p>
