--- a/primaryOwenTracker/templates/submission.html
+++ b/primaryOwenTracker/templates/submission.html
@@ -49,7 +49,7 @@
                 dataType: 'json',
                 contentType: 'application/json',
                 data:JSON.stringify(formData)
-                success: processform(e){
+                success: processForm(e){
                     console.log("wow!")}
             });
             e.preventDefault();
